# XJTU_file_system_OSlab

./: CMakeLists.txt  FS.txt  README.md  main.c
disk_manage/: disk.c  disk.h
img/: command_hash.excalidraw  read_block多级.excalidraw
logical_file_sys/: block.c  block.h  group.c  group.h  logical_struct.h
test/: 8_blocks.txt
user_interface/: file.c  file.h  shell.c  shell.h
